# network-chat-room

./: .env.example  .gitignore  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  program_flow.md  pyproject.toml
agent/: agent.py
client/: chat_manager.py  client.py  file_manager.py  login_window.py  main_window.py  network_manager.py  ui_manager.py
encryption/: utils.py
server/: chat_history.py  server.py  user_manager.py
utils/: encryption.py  logger.py
